--- a/about.html
+++ b/about.html
@@ -99,19 +99,16 @@
         <div class="about_box">
           <div class="title">
             <!--<p>About Us</p>-->
-            <h1>Benefits of Hiring A Paralegal</h1>
+            <h1>About Me</h1>
           </div>
-          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
-          Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
+          <p>Welcome to D.A. Reid Paralegal. I use to drive truck for over 33 years and then it was time for a change of career so 
+          going back to school at the age of 50 to study paralegal services was challenge that was embraced with open arms.</p>
 
-          <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
-          tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
+          <p>Over the course of my trucking years, I encountered many individuals who were not being treated fairly. From all of this 
+          the motivation kicked into high gear and now it’s time to help you with your legal issues.</p>
 
-          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
-          competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
-
-          <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
-          knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
+          <p>The opportunity to serve and earn your trust, and allocating to you a stellar and customized service within the legal 
+          sector is what D.A. Reid Paralegal stands behind. D.A. Reid Paralegal the Paralegal that fights for you!!</p>
           <br><br><br><br><br>
           </div>
       </div>
