--- a/before-administrative-tribunals.html
+++ b/before-administrative-tribunals.html
@@ -89,6 +89,7 @@
 <!--Header End--> 
 
 <!-- About Start -->
+<!--
 <div class="about-wrap" id="about">
   <div class="container">
     <div class="row">
@@ -98,7 +99,6 @@
       <div class="col-lg-7">
         <div class="about_box">
           <div class="title">
-            <!--<p>About Us</p>-->
             <h1>Benefits of Hiring A Paralegal</h1>
           </div>
           <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
@@ -149,33 +149,34 @@
 </div>
 <!-- About End --> 
 
-<!-- Law Start -->
+<!-- Law Start --><div  style="padding: 30px;">
 <div class="law-wrap">
   <div class="lawflex">
     <div class="row">
       <div class="col-lg-6 offset-6">
         <div class="law_box">
           <div class="title">
-            <h1>.</h1>
+            <h1>Administrative Tribunals</h1>
           </div>
-          <p>.</p>
-          <br><br><br><br>
-          <ul class="tick">
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-          </ul>
-          <p>.</p>
+          <p>Tribunals Ontario is a group of 14 adjudicative tribunals that play an important role in the administration of justice in Ontario. 
+          Each year our tribunals receive and resolve nearly 100,000 cases - providing fair, accessible dispute resolution to thousands of Ontarians.</p>
+
+          <p>Our tribunals are: Assessment Review Board, Animal Care Review Board, Child and Family Services Review Board, Criminal Injuries 
+          Compensation Board, Custody Review Board, Fire Safety Commission, Human Rights Tribunal of Ontario, Landlord and Tenant Board, Licence 
+          Appeal Tribunal, Ontario Civilian Police Commission, Ontario Parole Board, Ontario Special Education Tribunal (English), Ontario 
+          Special Education Tribunal (French) and Social Benefits Tribunal.</p>
+
+          <p>The kinds of disputes we address at our tribunals are extremely varied. We resolve disputes in the social, property assessment, 
+          safety and licensing sectors.</p>
+
+          <p>These are important issues that touch people's lives in fundamental ways. People who appear before our tribunals have a right to 
+          fair and accessible dispute resolution, and that is our primary commitment to you.</p>
           <br><br><br><br><br><br><br>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
 <!-- Law End -->
 <!--
