--- a/cannabis_law.html
+++ b/cannabis_law.html
@@ -72,12 +72,12 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> <a class="nav-link smoothscroll" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
                 <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="#home">Practice Areas</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="practicearea.html">Practice Areas</a></li>
               <!--
               <li class="nav-item"><a class="nav-link smoothscroll" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="#blog">Blog</a></li>
               -->
-              <li class="nav-item"><a class="nav-link smoothscroll" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
             <div class="quote-btn"><a href="#">Get A Quote</a></div>
           </div>
@@ -88,71 +88,168 @@
 </div>
 <!--Header End--> 
 
-<!-- Icons Start -->
-<div class="practice-wrap practicearea_sec" id="practice">
+<!-- About Start -->
+<!--
+<div class="about-wrap" id="about">
   <div class="container">
-    <div class="title">
-      <h1>Our Practice Areas</h1>
+    <div class="row">
+      <div class="col-lg-5">
+        <div class="aboutImg"><img src="images/lawyerabout.jpg" alt=""></div>
+      </div>
+      <div class="col-lg-7">
+        <div class="about_box">
+          <div class="title">
+            <h1>Benefits of Hiring A Paralegal</h1>
+          </div>
+          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
+          Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
+
+          <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
+          tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
+
+          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
+          competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
+
+          <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
+          knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
+          </div>
+      </div>
     </div>
-    <ul class="row unorderList">
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/business_law.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="small-claims-court.html"><b>Small Claims Court</b></a></h3>
-            <br> <br>
-          </div>
+    
+    <!--Counter Start-->
+    <!--
+    <div id="counter">
+      <div class="row">
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-user"></i></div>
+            <span class="counter-number" data-from="1" data-to="1824" data-speed="2000">824</span> <span class="counter-text">Trusted Client</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/real_estateImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="provincial-offences.html"><b>Provincial Offences</b></a></h3>
-             <br> <br>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-briefcase"></i></div>
+            <span class="counter-number" data-from="1" data-to="5598" data-speed="5000">98</span> <span class="counter-text">Successful Cases</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/familyImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="highway-traffic-act-and-cvor.html"><b>Highway Traffic Act and CVOR</b></a></h3>
-            <p></p>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-award"></i></div>
+            <span class="counter-number" data-from="1" data-to="6574" data-speed="6000">74</span> <span class="counter-text">Honored Awards</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/civilImg.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="on-summary-conviction-offences.html"><b>On Summary Conviction Offences</b></a></h3>
-            <p></p>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-flag-checkered"></i></div>
+            <span class="counter-number" data-from="1" data-to="34425" data-speed="10000">25</span> <span class="counter-text">Experience</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/educationImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="before-administrative-tribunals.html"><b>Before Administrative Tribunals</b></a></h3>
-          </div>
-        </div>
-      </li>
-   <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/tort_law.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
-            <br>  <p></p>
-          </div>
-        </div>
-      </li>
-    </ul>
+      </div>
+    </div>
+    -->
+    <!--Counter End--> 
+    
   </div>
 </div>
-<!-- Icons End --> 
+<!-- About End --> 
 
+<!-- Law Start --><div  style="padding: 30px;">
+<div class="law-wrap">
+  <div class="lawflex">
+    <div class="row">
+      <div class="col-lg-6 offset-6">
+        <div class="law_box">
+          <div class="title">
+            <h1>Cannabis Law</span></h1>
+          </div>
+          <p>The Ontario Government has put rules in place to keep cannabis out of the hands of children and youth, keep our roads safe and combat the illegal market.</p>
+          <p>After extensive public and stakeholder engagement, we now have laws in place about how, where and who can buy and possess cannabis in the province.</p>
+          <p>We are also moving forward with a tightly regulated private retail model for cannabis that will launch by April 1, 2019.</p>
+          <p>You must be <b>19 and older</b> to buy, use, possess and grow <b>recreational</b> cannabis. This is the same as the minimum age for the sale of tobacco and alcohol in Ontario.</p>
+          <p>The government has enacted the following rules for using cannabis, both medical and recreational.
+          <p><b>Where you can smoke and vape cannabis</b></p>
+          <ui>
+            <li>Private residences – this does not include residences that are also workplaces (for example, long-term care and retirement homes)</li>
+            <li>Many outdoor public places (for example, sidewalks and parks)</li>
+            <li>Designated smoking guest rooms in hotels, motels and inns</li>
+            <li>Residential vehicles and boats that meet certain criteria (for example, if they have permanent sleeping accommodations and cooking facilities, and are parked or anchored)</li>
+            <li>Scientific research and testing facilities (if the cannabis use is for scientific research and testing purposes)</li>
+            <li>Controlled areas in:
+            <ui>
+                <li>long-term care homes</li>
+                <li>certain retirement homes</li>
+                <li>residential hospices</li>
+                <li>provincially-funded supportive housing</li>
+                <li>designated psychiatric facilities or veterans’ facilities</li>
+            </ui>
+          </ui>
+          <br>
+          <p><b>Where you cannot smoke or vape cannabis</b></p>
+
+          <p><b>Indoors</b></p>
+          <p>You cannot smoke or vape cannabis in:</p>
+          <ui>
+                <li>indoor common areas in condos, apartment buildings and university/college residences</li>
+                <li>enclosed public places and enclosed work places</li>
+                <li>non-designated guest rooms in hotels, motels and inns</li>
+          </ui>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+        <div style=" float: left;  width: 50%;  padding: 60px;  height: 300px;">
+          <h6><b>Schools and places where children gather</b></h6>
+          <h6>You cannot smoke or vape cannabis:</h6>
+          <ui>
+                <li>at school, on school grounds, and all public areas within 20 metres of these grounds</li>
+                <li>on children’s playgrounds and public areas within 20 metres of playgrounds</li>
+                <li>in child care centres or where an early years program is provided</li>
+                <li>in places where home child care is provided — even if children aren’t present</li>
+          </ui>
+          <br>
+          <h6><b>Hospitals, hospices, care homes and other facilities</b></h6>
+          <h6>You cannot smoke or vape cannabis:</h6>
+          <ui>
+                <li>within 9 metres from the entrance or exit of hospitals (public and private), psychiatric facilities, long-term care homes, independent health facilities</li>
+                <li>on outdoor grounds of hospitals (public and private) and psychiatric facilities</li>
+                <li>in non-controlled areas in long-term care homes, certain retirement homes, provincially-funded supportive housing, designated psychiatric or veterans’ facilities, and residential hospices</li>
+          </ui>
+          <br>
+          <h6><b>Publicly owned spaces</b></h6>
+          <h6>You cannot smoke or vape cannabis in publicly-owned sport fields (not including golf courses), nearby spectator areas and public areas within 20 metres of these areas.</h6>
+
+          <h6><b>Vehicles and boats</b></h6>
+          <h6>You cannot consume cannabis (smoking, vaping and eating) in a vehicle or boat that is being driven or will be driven.</h6>
+          <br>
+          <h6>You cannot smoke or vape cannabis:</h6>
+          <ui>
+                <li>in restaurants and on bar patios and public areas within 9 metres of a patio</li>
+                <li>on outdoor grounds of specified Ontario government office buildings</li>
+                <li>in reserved seating areas at outdoor sports and entertainment locations</li>
+                <li>on grounds of community recreational facilities and public areas within 20 metres of those grounds</li>
+                <li>in sheltered outdoor areas with a roof and more than two walls which the public or employees frequent, or are invited to (for example, a bus shelter)</li>
+          </ui>
+
+        </div><div style="float: left;  width: 50%;  padding: 60px;  height: 300px;">
+            <h6>You are able to have a maximum of 30 grams (about one ounce) of dried cannabis (or equivalent) in public at any time.</h6>
+            <h6>Medical cannabis is subject to different rules than recreational cannabis. The production and sale of medical cannabis is regulated exclusively by the federal 
+            government. Under the new regulations there are improvements for patients accessing cannabis for medical purposes from federally licensed sellers.</h6>
+            <br><br>
+            <h6><b>These improvements include:</b></h6>
+            <ui>
+                <li>the ability to request the return of their medical document from a federally licensed seller</li>
+                <li>the ability to request the transfer of their medical document to a different federally licensed seller</li>
+                <li>that the effective date on the registration document will be the day it is issued, rather than the day the medical document was signed by the health care provider</li>
+                <li>removal of the 30-day limitation period for buying cannabis from a federally licensed seller (to ensure no break in a patient's supply)</li>
+                <li>a broader range of permitted products</li>
+                <li>access to an increasing number of licensed producers and sellers (Health Canada has licensed more producers in the last year than in the 4 
+                previous years combined). The increasing number of licensed producers enables:</li>
+                <li>competitive prices</li>
+                <li>more supply of cannabis</li>
+                <li>an increased availability of a range of products</li>
+            </ui>
+            </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- Law End -->
 <!--
 <div class="testimonials-wrap" id="testimonials">
     <div class="container">
