--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="practiceImg"><img src="images/business_law.png" alt=""></div>
           <div class="practice_section">
             <h3><a href="small-claims-court.html"><b>Small Claims Court</b></a></h3>
-            <br> <br>
+            <br>  <p></p>
           </div>
         </div>
       </li>
@@ -236,7 +236,7 @@
           <div class="practiceImg"><img src="images/real_estateImg.jpg" alt=""></div>
           <div class="practice_section">
             <h3><a href="provincial-offences.html"><b>Provincial Offences</b></a></h3>
-             <br> <br>
+             <br>  <p></p>
           </div>
         </div>
       </li>
@@ -263,20 +263,28 @@
           <div class="practiceImg"><img src="images/educationImg.jpg" alt=""></div>
           <div class="practice_section">
             <h3><a href="before-administrative-tribunals.html"><b>Before Administrative Tribunals</b></a></h3>
+             <p></p>
           </div>
         </div>
       </li>
-      <!--
       <li class="col-lg-4 col-md-6">
         <div class="practice_box">
-          <div class="practiceImg"><img src="images/injuryImg.jpg" alt=""></div>
+          <div class="practiceImg"><img src="images/tort_law.png" alt=""></div>
           <div class="practice_section">
-            <h3><a href="#">PERSONAL INJURY</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur elit. In iaculis, quam non suscipit tincidunt, ex urna interdum odio...</p>
+            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
+            <br>  <p></p>
           </div>
         </div>
       </li>
-      -->
+       <li class="col-lg-4 col-md-6">
+        <div class="practice_box">
+          <div class="practiceImg"><img src="images/cannabis_law.png" alt=""></div>
+          <div class="practice_section">
+            <h3><a href="cannabis_law.html"><b>Cannabis Law</b></a></h3>
+            <br>  <p></p>
+          </div>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
@@ -284,33 +292,84 @@
 
 
 <!-- Law Start -->
-<div class="law-wrap">
-  <div class="lawflex">
+
+
+<div class="about-wrap" style="padding: 50px;">
     <div class="row">
-      <div class="col-lg-6 offset-6">
-        <div class="law_box">
+      <div class="col-lg-5">
+        <div ><img src="images/commissioner.jpg" alt=""></div>
+      </div>
+      <div class="col-lg-7">
+        <div class="about_box">
           <div class="title">
-            <h1>.</h1>
+            <!--<p>About Us</p>-->
+            <h1>Other Services</h1>
           </div>
-          <p>.</p>
-          <br><br><br><br>
-          <ul class="tick">
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-          </ul>
-          <p>.</p>
-          <br><br><br><br><br><br><br>
+          <h2><b>Commissioners Of Oath's</b></h2>
+
+          <h6>Here is a list of the documents we can commission: <br><br>
+          <ui>
+            <li>Legal Documents (Affidavits, Statutory Declarations)</li>
+            <li>Consent to Travel with a Minor/Child</li>
+            <li>Vehicle Ownership Transfers</li>
+            <li>Proof of Loss (Insurance Claims)</li>
+            <li>Professional Accreditation Applications</li>
+            <li>Passport Applications (In Lieu of Guarantor)</li>
+            <li>Lost Passport, Student Loan Applications</li>
+            <li>Affidavit of Discrepancy in Name</li>
+            <li>Name Change Application/Common Law Declarations</li>
+            <li>Delayed Birth Registration Forms</li>
+            <li>Application to Amend Birth Registration</li>
+            <li>Residency Document</li>
+            <li>Single Status Certificate</li>
+            <li>Municipal Information Form (MIF) for Liquor Licence</li>
+          </ui>
+          <br><br>
+          <h2><b>Notary Public</b></h2>
+
+          <h6>A Notary Public is empowered by law and by custom and usage of notaries through the ages to: </h6>
+          <ui>
+            <li>Administer Oaths </li>
+            <li>Attest Signatures </li>
+            <li>Authenticate Documents </li>
+            <li>Give Notarial Acts </li>
+            <li>Take Affidavits </li>
+            <li>Take Affirmations and Declarations </li>
+            <li>Issue notarial certificates in respect of documents and persons</li>
+          </ui>
+          </div>
+      </div>
+    </div>
+    
+    <!--Counter Start-->
+    <!--
+    <div id="counter">
+      <div class="row">
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-user"></i></div>
+            <span class="counter-number" data-from="1" data-to="1824" data-speed="2000">824</span> <span class="counter-text">Trusted Client</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-briefcase"></i></div>
+            <span class="counter-number" data-from="1" data-to="5598" data-speed="5000">98</span> <span class="counter-text">Successful Cases</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-award"></i></div>
+            <span class="counter-number" data-from="1" data-to="6574" data-speed="6000">74</span> <span class="counter-text">Honored Awards</span> </div>
+        </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-flag-checkered"></i></div>
+            <span class="counter-number" data-from="1" data-to="34425" data-speed="10000">25</span> <span class="counter-text">Experience</span> </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
+    -->
+    <!--Counter End--> 
+    </div>
 <!-- Law End -->
 <!--
 <div class="testimonials-wrap" id="testimonials">
