--- a/small-claims-court.html
+++ b/small-claims-court.html
@@ -89,6 +89,7 @@
 <!--Header End--> 
 
 <!-- About Start -->
+<!--
 <div class="about-wrap" id="about">
   <div class="container">
     <div class="row">
@@ -98,7 +99,6 @@
       <div class="col-lg-7">
         <div class="about_box">
           <div class="title">
-            <!--<p>About Us</p>-->
             <h1>Benefits of Hiring A Paralegal</h1>
           </div>
           <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
@@ -115,7 +115,7 @@
           </div>
       </div>
     </div>
-    
+ -->   
     <!--Counter Start-->
     <!--
     <div id="counter">
@@ -149,33 +149,51 @@
 </div>
 <!-- About End --> 
 
-<!-- Law Start -->
+<!-- Law Start --><div  style="padding: 30px;">
 <div class="law-wrap">
   <div class="lawflex">
     <div class="row">
-      <div class="col-lg-6 offset-6">
+      <div class="col-lg-11 offset-6">
         <div class="law_box">
           <div class="title">
-            <h1>.</h1>
+            <h1>Small Claims</h1>
           </div>
-          <p>.</p>
-          <br><br><br><br>
+          <p><b>There are several reasons as to why you can take someone to Small Claims Court, but here are three key reasons:</b></p>
+
+          <p>1.Acquire money that is owed to you under an agreement.<br>
+             2. If you were harmed by actions committed by someone else.<br>
+             3. Retrieve goods that you believe belong to you.</p>
+          <br>
+          <p>Small Claims Court matters should be taken very seriously. There is the potential to sue for a large sum of money. 
+          For that reason, here At D. Reid Paralegal, I do not want to just work for you, but with you, as your partner in your 
+          quest for justice. I will present you with honest answers, not theories, and be with you every step of the way. Throughout 
+          the process, I will be able to help you through this stressful time in your life and acquire the truthful answers that you deserve.</p>
+          <p><b>Small Claims include:</b></p>
           <ul class="tick">
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
-            <li>.</li>
+            <li>​Judgment enforcement / Unpaid debts</li>
+            <li>​Defective Workmanship</li>
+            <li>​Lawsuits regarding Mortgage disputes</li>
+            <li>​Lawsuits regarding brokerage or agent fees (mortgage and real estate)</li>
+            <li>​Settlements</li>
+            <li>​Wrongful dismissal</li>
+            <li>​Lawsuits regarding promissory notes and loans</li>
+            <li>​Contract disputes</li>
+            <li>​Personal injury / Damage to property</li>
+            <li>​Financial Services</li>
           </ul>
-          <p>.</p>
-          <br><br><br><br><br><br><br>
+          <p><b>Defending Claims:</b></p>
+
+          <p>D. Reid Paralegal doesn’t only advocate on someone’s behalf, but I will defend a claim against you. Lawsuits should not be 
+          ignored. The case will simply go on without you being able to tell your side of the story. Allow D. Reid Paralegal to provide 
+          you with competent, dedicated, and passionate representation that meets your needs and interests.<br><br>
+          The advantage’s in having D. Reid Paralegal represent you in legal matters, is the ability to have peace of mind of knowing that 
+          your needs will be met on a professional, affordable and reliable level. My expectations of you are to provide all documents and 
+          information that is relative to your matter so I can advocate for you with the best results possible.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
 <!-- Law End -->
 <!--
