--- a/tort.html
+++ b/tort.html
@@ -72,12 +72,12 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"> <a class="nav-link smoothscroll" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
                 <li class="nav-item"><a class="nav-link smoothscroll" href="about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link smoothscroll" href="#home">Practice Areas</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="practicearea.html">Practice Areas</a></li>
               <!--
               <li class="nav-item"><a class="nav-link smoothscroll" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link smoothscroll" href="#blog">Blog</a></li>
               -->
-              <li class="nav-item"><a class="nav-link smoothscroll" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link smoothscroll" href="#contact">Contact</a></li>
             </ul>
             <div class="quote-btn"><a href="#">Get A Quote</a></div>
           </div>
@@ -88,71 +88,93 @@
 </div>
 <!--Header End--> 
 
-<!-- Icons Start -->
-<div class="practice-wrap practicearea_sec" id="practice">
+<!-- About Start -->
+<!--
+<div class="about-wrap" id="about">
   <div class="container">
-    <div class="title">
-      <h1>Our Practice Areas</h1>
+    <div class="row">
+      <div class="col-lg-5">
+        <div class="aboutImg"><img src="images/lawyerabout.jpg" alt=""></div>
+      </div>
+      <div class="col-lg-7">
+        <div class="about_box">
+          <div class="title">
+            <h1>Benefits of Hiring A Paralegal</h1>
+          </div>
+          <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
+          Therefore, making the court systems accessible to all, rather than that of just the upper class.</p>
+
+          <p>The education that Paralegals receive is specific to the areas of law they are allowed to practice. Paralegals are unable to practice all types of law, for this reason their education is fine 
+          tuned to the areas they are allowed to service. Thus, they have a greater knowledge and understanding of the law they are going to practice once they are finished their educational program.</p>
+
+          <p>Paralegals are comparable to lawyers, in the sense that we both are regulated by the same law and principles. We both are required to meet specific standards of learning, professional 
+          competence, and adhere to a professional conduct that is appropriate for the legal services we provide.</p>
+
+          <p>Next time you require legal help; remember you might not need to go to the most expensive person to get the job done. Do your research; Paralegals are just as competent, educated and 
+          knowledgeable as any other legal service provider. The best part, Paralegals are usually half the price.</p>
+          </div>
+      </div>
     </div>
-    <ul class="row unorderList">
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/business_law.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="small-claims-court.html"><b>Small Claims Court</b></a></h3>
-            <br> <br>
-          </div>
+    
+    <!--Counter Start-->
+    <!--
+    <div id="counter">
+      <div class="row">
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-user"></i></div>
+            <span class="counter-number" data-from="1" data-to="1824" data-speed="2000">824</span> <span class="counter-text">Trusted Client</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/real_estateImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="provincial-offences.html"><b>Provincial Offences</b></a></h3>
-             <br> <br>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-briefcase"></i></div>
+            <span class="counter-number" data-from="1" data-to="5598" data-speed="5000">98</span> <span class="counter-text">Successful Cases</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/familyImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="highway-traffic-act-and-cvor.html"><b>Highway Traffic Act and CVOR</b></a></h3>
-            <p></p>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-award"></i></div>
+            <span class="counter-number" data-from="1" data-to="6574" data-speed="6000">74</span> <span class="counter-text">Honored Awards</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/civilImg.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="on-summary-conviction-offences.html"><b>On Summary Conviction Offences</b></a></h3>
-            <p></p>
-          </div>
+        <div class="col-lg-3 col-md-6  counter-item">
+          <div class="counterbox">
+            <div class="counter-icon"><i class="fas fa-flag-checkered"></i></div>
+            <span class="counter-number" data-from="1" data-to="34425" data-speed="10000">25</span> <span class="counter-text">Experience</span> </div>
         </div>
-      </li>
-      <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/educationImg.jpg" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="before-administrative-tribunals.html"><b>Before Administrative Tribunals</b></a></h3>
-          </div>
-        </div>
-      </li>
-   <li class="col-lg-4 col-md-6">
-        <div class="practice_box">
-          <div class="practiceImg"><img src="images/tort_law.png" alt=""></div>
-          <div class="practice_section">
-            <h3><a href="tort.html"><b>Tort Law</b></a></h3>
-            <br>  <p></p>
-          </div>
-        </div>
-      </li>
-    </ul>
+      </div>
+    </div>
+    -->
+    <!--Counter End--> 
+    
   </div>
 </div>
-<!-- Icons End --> 
+<!-- About End --> 
 
+<!-- Law Start --><div  style="padding: 30px;">
+<div class="law-wrap">
+  <div class="lawflex">
+    <div class="row">
+      <div class="col-lg-6 offset-6">
+        <div class="law_box">
+          <div class="title">
+            <h1>Tort Law</span></h1>
+          </div>
+          <p>Tort law consists of some of following assault, Sexual or workplace harassment, vandalism, defamation. Trespassing Invasion of privacy and 
+          injuries caused by domestic pets if they are known to be dangerous.</p>
+          <p>Negligence is by far the most common type of tort. </p>
+          <p>The most common examples of negligence torts are cases of slip and fall, which occur when a property owner fails to act as a reasonable 
+          person would, thus resulting in harm to the visitor or customer.</p>
+
+          <p>A tort is an act or omission that gives rise to injury or harm to another and amounts to a civil wrong for which courts impose liability.
+          In the context of torts, "injury" describes the invasion of any legal right, whereas "harm" describes a loss or detriment in fact that an 
+          individual suffers.</p>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<!-- Law End -->
 <!--
 <div class="testimonials-wrap" id="testimonials">
     <div class="container">
