--- a/provincial-offences.html
+++ b/provincial-offences.html
@@ -89,7 +89,7 @@
 <!--Header End--> 
 
 <!-- About Start -->
-
+<!--
 <div class="about-wrap" id="about">
   <div class="container">
     <div class="row">
@@ -99,7 +99,6 @@
       <div class="col-lg-7">
         <div class="about_box">
           <div class="title">
-            <!--<p>About Us</p>-->
             <h1>Benefits of Hiring A Paralegal</h1>
           </div>
           <p>There are many benefits to hiring a Paralegal; the main benefit of course is the affordability factor. Paralegals, as a whole, on average, charge much less than other legal service providers. 
@@ -150,7 +149,7 @@
 </div>
 <!-- About End --> 
 
-<!-- Law Start -->
+<!-- Law Start --><div  style="padding: 30px;">
 <div class="law-wrap">
   <div class="lawflex">
     <div class="row">
@@ -182,6 +181,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 <!-- Law End -->
 <!--
